--- a/src/controller-element.html
+++ b/src/controller-element.html
@@ -1,6 +1,6 @@
-<link rel="import" href="/bower_components/polymer/polymer.html">
+<link rel="import" href="../bower_components/polymer/polymer.html">
 
-<!--<link rel="import" href="/bower_components/">-->
+<!--<link rel="import" href="../bower_components/">-->
 
 <dom-module id="controller-element">
   <template>
