Finished the project

--- a/src/renderer-element.html
+++ b/src/renderer-element.html
@@ -30,10 +30,11 @@
           notify: true,
           value: function() {
             return {
+              customValue: false,
               customColor: false,
               customImage: false,
-              image: null,
-              color: null,
+              image: 4,
+              color: 'red',
               value: 10
             }
           }
