--- a/src/bank-note.html
+++ b/src/bank-note.html
@@ -181,9 +181,9 @@
         <div class="lefter">
           <h1>[[value]]</h1><h3>flt</h3>
         </div>
-        <img src="../images/symbol.svg" class="righter absolute">
+        <img src="images/symbol.svg" class="righter absolute">
       </div>
-      <img src="../images/face-[[image]].png" class="photo absolute">
+      <img src="images/face-[[image]].png" class="photo absolute">
       <div class="circle"></div>
     </div>
     <div id="back" class="backfacing">
@@ -193,7 +193,7 @@
             [[quote]]
             <span>~[[author]]</span>
           </div>
-          <img src="../images/face-[[image]].png" class="photo">
+          <img src="images/face-[[image]].png" class="photo">
         </div>
       </div>
     </div>
