I have no clue why but it should work

--- a/src/bank-note.html
+++ b/src/bank-note.html
@@ -181,7 +181,7 @@
         <div class="lefter">
           <h1>[[value]]</h1><h3>flt</h3>
         </div>
-        <img src="images/symbol.svg" class="righter absolute">
+        <img src="../images/symbol.svg" class="righter absolute">
       </div>
       <img src="images/face-[[image]].png" class="photo absolute">
       <div class="circle"></div>
